--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
 		<main class="main">
 			<h1 class="visually-hidden">Интернет-магазин товаров apple</h1>
 			{{> hero}}
-			<!-- {{> reviews}}
-			{{> catalog}} -->
+			{{> reviews}}
+			{{> catalog}}
 		</main>
 
-		<!-- {{> footer}} -->
+		{{> footer}}
 	</div>
 </body>
 
